Add elastic log sink to jobs and consolidate Serilog versions

--- a/Purchasing.Jobs.Common/app.config
+++ b/Purchasing.Jobs.Common/app.config
@@ -11,7 +11,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Serilog" publicKeyToken="24c2f752a8e58a10" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.0.0" newVersion="1.5.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
@@ -24,5 +24,6 @@
     <add key="Stackify.Environment" value="" />
     <add key="Stackify.ProxyServer" value="" />
     <add key="Stackify.ApiKey" value="[External]" />
+    <add key="Stackify.ElasticUrl" value="[External]" />
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup></configuration>
