--- a/Purchasing.Jobs.NotificationsCommon/app.config
+++ b/Purchasing.Jobs.NotificationsCommon/app.config
@@ -12,7 +12,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Serilog" publicKeyToken="24c2f752a8e58a10" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.0.0" newVersion="1.5.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -21,5 +21,6 @@
     <add key="Stackify.Environment" value="" />
     <add key="Stackify.ProxyServer" value="" />
     <add key="Stackify.ApiKey" value="" />
+    <add key="Stackify.ElasticUrl" value="" />
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup></configuration>
