--- a/Purchasing.WS/app.config
+++ b/Purchasing.WS/app.config
@@ -42,5 +42,6 @@
     <add key="Stackify.Environment" value="" />
     <add key="Stackify.ProxyServer" value="" />
     <add key="Stackify.ApiKey" value="[External]" />
+    <add key="Stackify.ElasticUrl" value="[External]" />
   </appSettings>
 </configuration>
