--- a/Purchasing.Core/packages.config
+++ b/Purchasing.Core/packages.config
@@ -3,9 +3,10 @@
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="Dapper" version="1.38" targetFramework="net451" />
   <package id="DataAnnotationsExtensions" version="1.1.0.0" targetFramework="net451" />
-  <package id="Elasticsearch.Net" version="7.3.0" targetFramework="net462" />
+  <package id="Elasticsearch.Net" version="7.8.1" targetFramework="net462" />
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net451" />
   <package id="Iesi.Collections" version="3.2.0.4000" requireReinstallation="True" />
+  <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net462" />
   <package id="NEST" version="7.3.0" targetFramework="net462" />
   <package id="NEST.JsonNetSerializer" version="7.3.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net462" />
