--- a/Purchasing.Jobs.NightlySync/packages.config
+++ b/Purchasing.Jobs.NightlySync/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="1.38" targetFramework="net451" />
-  <package id="elmah.io.client" version="2.0.22" targetFramework="net451" />
+  <package id="Elasticsearch.Net" version="7.8.1" targetFramework="net462" />
+  <package id="elmah.io.client" version="2.0.29" targetFramework="net462" />
   <package id="Microsoft.Azure.WebJobs" version="1.0.1" targetFramework="net451" />
   <package id="Microsoft.Azure.WebJobs.Core" version="1.0.1" targetFramework="net451" />
+  <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net462" />
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net451" />
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net451" />
   <package id="Microsoft.Data.Services.Client" version="5.6.0" targetFramework="net451" />
@@ -12,10 +14,17 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net462" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="OctoPack" version="3.0.71" targetFramework="net451" developmentDependency="true" />
-  <package id="Serilog" version="1.5.7" targetFramework="net451" />
-  <package id="Serilog.Sinks.ElmahIO" version="1.5.8" targetFramework="net451" />
+  <package id="Serilog" version="2.8.0" targetFramework="net462" />
+  <package id="Serilog.Formatting.Compact" version="1.0.0" targetFramework="net462" />
+  <package id="Serilog.Formatting.Elasticsearch" version="8.4.1" targetFramework="net462" />
+  <package id="Serilog.Sinks.Elasticsearch" version="8.4.1" targetFramework="net462" />
+  <package id="Serilog.Sinks.ElmahIO" version="2.0.13" targetFramework="net462" />
+  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net462" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net462" />
   <package id="Serilog.Sinks.Stackify" version="1.0.12.0" targetFramework="net451" />
   <package id="StackifyLib" version="1.12.0.0" targetFramework="net451" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net462" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="4.0.1" targetFramework="net451" />
 </packages>
