--- a/Purchasing.Jobs.UpdateOrderIndexes/App.config
+++ b/Purchasing.Jobs.UpdateOrderIndexes/App.config
@@ -18,7 +18,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Serilog" publicKeyToken="24c2f752a8e58a10" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.0.0" newVersion="1.5.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -26,5 +26,6 @@
     <add key="Stackify.AppName" value="Purchasing.Jobs.UpdateOrderIndexes" />
     <add key="Stackify.Environment" value="[External]" />
     <add key="Stackify.ApiKey" value="[External]" />
+    <add key="Stackify.ElasticUrl" value="[External]" />
   </appSettings>
 </configuration>
