--- a/Purchasing.Mvc/bundleConfig.json
+++ b/Purchasing.Mvc/bundleConfig.json
@@ -1,10 +1,136 @@
 [
   {
-    "outputFileName": "wwwroot/css/main.min.css",
-    "inputFiles": ["wwwroot/css/main.css", "wwwroot/css/custom.css"]
+    "outputFileName": "~/bundles/jquery.min.js",
+    "inputFileNames": ["~/Scripts/jquery-{version}.js"]
   },
   {
-    "outputFileName": "wwwroot/js/main.min.js",
-    "inputFiles": ["wwwroot/js/util.js", "wwwroot/js/main.js"]
+    "outputFileName": "~/bundles/jqueryval.min.js",
+    "inputFileNames": ["~/Scripts/jquery.validate*"]
+  },
+  {
+    "outputFileName": "~/bundles/jqueryui.min.js",
+    "inputFileNames": [
+      "~/Scripts/external/jquery/jquery-1.7.1.js",
+      "~/Scripts/external/jquery-ui/jquery-ui-1.8.17.js"
+    ]
+  },
+  {
+    "outputFileName": "~/bundles/head.min.js",
+    "inputFileNames": ["~/Scripts/public/head/*.js"]
+  },
+  {
+    "outputFileName": "~/bundles/common.min.js",
+    "inputFileNames": ["~/Scripts/public/common/*.js"]
+  },
+  {
+    "outputFileName": "~/bundles/order.min.js",
+    "inputFileNames": ["~/Scripts/public/order/*.js"]
+  },
+  {
+    "outputFileName": "~/bundles/orderreview.min.js",
+    "inputFileNames": [
+      "~/Scripts/public/single/fileuploader.js",
+      "~/Scripts/public/single/OrderReview.js",
+      "~/Scripts/public/single/jquery.tmpl.min.js",
+      "~/Scripts/public/single/SausageCustom.js",
+      "~/Scripts/public/single/jquery.stickyfloat.js"
+    ]
+  },
+  {
+    "outputFileName": "~/bundles/history.min.js",
+    "inputFileNames": [
+      "~/Scripts/public/single/TableTools.js",
+      "~/Scripts/public/single/ZeroClipboard.js",
+      "~/Scripts/public/single/RearrangeDataTable.js",
+      "~/Scripts/public/single/FixedHeader.js"
+    ]
+  },
+  {
+    "outputFileName": "~/bundles/single/receiveItems.min.js",
+    "inputFileNames": ["~/Scripts/public/single/receiveitems.js"]
+  },
+  {
+    "outputFileName": "~/bundles/single/payInvoice.min.js",
+    "inputFileNames": ["~/Scripts/public/single/payinvoice.js"]
+  },
+  {
+    "outputFileName": "~/bundles/highlight.min.js",
+    "inputFileNames": ["~/Scripts/public/single/jquery.highlight.js"]
+  },
+  {
+    "outputFileName": "~/bundles/modernizr.min.js",
+    "inputFileNames": ["~/Scripts/modernizr-*"]
+  },
+  {
+    "outputFileName": "~/bundles/bootstrap.min.js",
+    "inputFileNames": ["~/Scripts/bootstrap.js", "~/Scripts/respond.js"]
+  },
+  {
+    "outputFileName": "~/bundles/main.min.css",
+    "inputFileNames": [
+      "~/Css/Site.css",
+      "~/Css/jquery-ui-1.8.16.caes.css",
+      "~/Css/jquery.qtip.min.css",
+      "~/Css/jquery.tzCheckbox.css",
+      "~/Css/Datatables.css",
+      "~/Css/custom.css",
+      "~/Css/icons.css"
+    ]
+  },
+  {
+    "outputFileName": "~/bundles/order.min.css",
+    "inputFileNames": [
+      "~/Css/single/fileuploader/fileuploader.css",
+      "~/Css/single/orderrequest.css",
+      "~/Css/single/chosen.css"
+    ]
+  },
+  {
+    "outputFileName": "~/bundles/single/chosen.min.css",
+    "inputFileNames": ["~/Css/single/chosen.css"]
+  },
+  {
+    "outputFileName": "~/bundles/single/fileuploader/fileuploader.min.css",
+    "inputFileNames": ["~/Css/single/fileuploader/fileuploader.css"]
+  },
+  {
+    "outputFileName": "~/bundles/single/orderrequest.min.css",
+    "inputFileNames": ["~/Css/single/orderrequest.css"]
+  },
+  {
+    "outputFileName": "~/bundles/multiselector.min.css",
+    "inputFileNames": ["~/Css/single/jquery.multiselector.css"]
+  },
+  {
+    "outputFileName": "~/bundles/single/receive-payment.min.css",
+    "inputFileNames": ["~/Css/single/receive-payment.css"]
+  },
+  {
+    "outputFileName": "~/bundles/single/chosen.min.js",
+    "inputFileNames": ["~/Scripts/public/single/chosen.jquery.js"]
+  },
+  {
+    "outputFileName": "~/bundles/multiselector.min.js",
+    "inputFileNames": ["~/Scripts/public/single/jquery.multiselector.js"]
+  },
+  {
+    "outputFileName": "~/bundles/customField.min.js",
+    "inputFileNames": ["~/Scripts/public/single/jquery.tablednd_0_5.js"]
+  },
+  {
+    "outputFileName": "~/bundles/fileuploader-js.min.js",
+    "inputFileNames": ["~/Scripts/public/single/fileuploader.js"]
+  },
+  {
+    "outputFileName": "~/bundles/landing.min.js",
+    "inputFileNames": ["~/Scripts/public/single/Landing.js"]
+  },
+  {
+    "outputFileName": "~/bundles/jqueryTmpl.min.js",
+    "inputFileNames": ["~/Scripts/public/single/jquerytmpl.js"]
+  },
+  {
+    "outputFileName": "~/bundles/jquery-qtip.min.js",
+    "inputFileNames": ["~/Scripts/public/common/jquery.qtip.js"]
   }
 ]
