--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -72,6 +72,7 @@
 		<PackageReference Include="Castle.Windsor.Extensions.DependencyInjection" Version="5.1.1"/>
     <PackageReference Include="BundlerMinifier.Core " Version="3.2.449"/>
     <PackageReference Include="AspNetCore.Security.CAS" Version="2.0.5" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0"/>
 	</ItemGroup>
   <Target Name="BundleMinify" BeforeTargets="BeforeBuild" Condition=" '$(Configuration)' == 'Release' ">
     <Exec Command="dotnet bundle" />
